tests/expectations/compiler/dynamic_dispatch/dynamic_call_in_final_block_fail.out
Error [ETYC0372177]: Dynamic calls can only be made from an entry point, but found one in a final block.
    --> compiler-test:7:28
     |
   7 |             let val: u64 = _dynamic_call::[u64](target, net, func);
     |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
